Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,8 @@ trigger:
 pool: windows-pc
 
 variables:
-  solution: '*/.sln'
-  proyecto: '*/.csproj'
+  solution: '**/*.sln'
+  proyecto: '**/*.csproj'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
